<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/CategoryStyle"
        android:background="@color/category_blue"
        android:text="@string/category_pickstory"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/numbers"
            android:style="@style/CategoryStyle"
            android:background="@color/category_red"
            android:text="@string/category_red"
            android:onClick="openRedRidingHood"/>

        <TextView
            android:id="@+id/family"
            android:style="@style/CategoryStyle"
            android:background="@color/category_pink"
            android:text="@string/category_pigs" />

        <TextView
            android:id="@+id/colors"
            android:style="@style/CategoryStyle"
            android:background="@color/category_purple"
            android:text="@string/category_anansi" />

        <TextView
            android:id="@+id/phrases"
            android:style="@style/CategoryStyle"
            android:background="@color/category_blue"
            android:text="@string/category_cinderella" />


    </LinearLayout>


</LinearLayout>
