<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_to_eight_red_six"
            android:textSize="23dp"
            android:gravity="center"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/six_to_eight_first_pic"
            android:layout_width="match_parent"
            android:layout_height="571dp"
            android:src="@drawable/wolf_attack_girl" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:background="@color/category_red"/>

        <Button
            android:id="@+id/btn_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:background="@color/category_yellow"/>

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/category_blue"
            android:text="Blue"
            />
        <Button
            android:id="@+id/btn_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/category_green"
            android:text="@string/green"
            />
        <Button
            android:id="@+id/btn_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/category_white"
            android:text="@string/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previousarrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="145dp"
            android:src="@drawable/backarrow" />

        <ImageButton
            android:id="@+id/nextarrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="145dp"
            android:src="@drawable/forwardarrow" />

    </LinearLayout>

</LinearLayout>